--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "bootstrap-vue": "^2.1.0",
         "laravel-echo": "^1.6.1",
+        "moment": "^2.24.0",
         "pusher-js": "^5.0.3"
     }
 }
